@@ -1,5 +1,10 @@
 2016-02-29  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Add new preferred name PID::charge3 in place of
+	PID::threeCharge, and also convenience PID::abscharge and
+	PID::abscharge3 functions -- all derived from changes in external
+	HEPUtils.
+
 	* Add analyze(const GenEvent*) and analysis(string&) methods to
 	AnalysisHandler, plus some docstring improvements.
 
